# Gol

./: .gitignore  AUTHORS  ChangeLog  Doxyfile  Gol.aps  Gol.rc  Gol.sln  Gol.vcproj  Gol.vcxproj  Gol.vcxproj.filters  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  UpgradeLog.htm  acinclude.m4  autogen.sh  blau.lua  blau2.lua  camp.lua  configure  configure.ac  configure.in  debugOn.sh  equip-blau.lua  equip-groc.lua  general.lua  gol.kdevelop  gol.kdevelop.pcs  gol.kdevses  groc.lua  jugador.cpp  premake.lua  resource.h  vermell.lua
SDL-1.2.15/lib/x64/: LICENSE.jpeg.txt
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
data/: Makefile.am  blau.lua  blau2.lua  camp.lua  equip-blau.lua  equip-groc.lua  general.lua  porter1.lua  vermell.lua
optimized/: Makefile  config.h  config.status  libtool
optimized/src/: Makefile  gol
src/: Animacio.cpp  Animacio.h  Autolist.h  C2DMatrix.h  CalculadoraPuntsSuport.cpp  CalculadoraPuntsSuport.h  Entitat.cpp  Entitat.h  Entitatmobil.cpp  Entitatmobil.h  EntitatsGestor.cpp  EntitatsGestor.h  Equip.cpp  Equip.h  EquipEstats.cpp  EquipEstats.h  FrameCounter.cpp  FrameCounter.h  Frames.cpp  Frames.h  Joc.cpp  Joc.h  Jugador.cpp  Jugador.h  JugadorEstats.cpp  JugadorEstats.h  JugadorMissatges.h  Jugadorbase.cpp  Jugadorbase.h  LUAManager.cpp  LUAManager.h  Makefile.am  Makefile.in  Marcador.cpp  Marcador.h  Missatge.h  Pantalla.cpp  Pantalla.h  Pilota.cpp  Pilota.h  (+23 more)
src/resources/: equip-groc.lua  groc.lua  porter2.lua
templates/: h
