data_DATA=	arg.jpg /
            camp.png /
            futbolista2.png /
            gol.bmp /
            jugador-ombra3.png /
            pilota.png /
            porteria.png /
            start.ttf /
            blau2.lua /
            equip-blau.lua /
            futbolista3.png /
            gol.png  /
            jugador-ombra.png /
            porter1.lua /
            porter.png  /
            vermell.lua /
            blau.lua  /
            equip-groc.lua /
            futbolista.png /
            groc.lua /
            porter2.lua /
            premake.lua /
            camp.lua /
            futbolista1b.png /
            general.lua /
            jugador-ombra2.png /
            pilota-ombra.png /
            porter2.png /
            soccer.ico


