resourcesdir = $(datadir)

resources_DATA = arg.jpg \
                 camp.png \
                 gol.bmp \
                 jugador-ombra3.png \
                 pilota.png \
                 porteria.png \
                 futbolista.png \
                 futbolista1b.png \
                 futbolista2.png \
                 futbolista3.png \
                 jugador-ombra2.png \
                 pilota-ombra.png \
                 porter2.png \
                 gol.png  \
                 jugador-ombra.png \
                 blau2.lua \
                 equip-blau.lua \
                 porter1.lua \
                 porter.png  \
                 vermell.lua \
                 blau.lua  \
                 equip-groc.lua \
                 groc.lua \
                 porter2.lua \
                 premake.lua \
                 camp.lua \
                 general.lua \
                 start.ttf \
                 soccer.ico
